<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom" >

    <RelativeLayout
        android:id="@+id/xlistview_header_content"
        android:layout_width="fill_parent"
        android:layout_height="90dp" >

        <LinearLayout
            android:id="@+id/xlistview_header_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical" >

           <!--  <ImageView
                android:id="@+id/xlistview_header_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/bookshelf_hand_icon" /> -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="3dp" >

                <ProgressBar
                    android:id="@+id/xlistview_header_progressbar"
                    android:layout_width="@dimen/progress_size"
                    android:layout_height="@dimen/progress_size"
                     />

                <TextView
                    android:id="@+id/xlistview_header_hint_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/xlistview_header_hint_normal"
                    android:textSize="@dimen/header_hint_textsize" 
                    android:textColor="#333333"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xlistview_header_last_time"
                    android:textSize="@dimen/update_at_textsize" 
                    android:textColor="#333333"
                    />

                <TextView
                    android:id="@+id/xlistview_header_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xlistview_updated_at"
                    android:textSize="@dimen/update_at_textsize" 
                    android:textColor="#333333"
                    />
            </LinearLayout>
        </LinearLayout>

        
         <ImageView
            android:id="@+id/xlistview_header_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/xlistview_header_text"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/arrow_margin_left"
            android:visibility="invisible"
            android:src="@drawable/xlistview_arrow" />
        
    </RelativeLayout>

</LinearLayout>