<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_bg"
    android:orientation="vertical" >

    <!-- title  bar -->

    <include 
       android:id="@+id/title_view"
        layout="@layout/common_title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="15dp"
                android:background="@color/common_diver_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="我的称呼"
                        android:textColor="@color/common_black_txt"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/name_txt"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/white"
                        android:hint="@string/input_name"
                        android:textColor="@color/common_black_txt"
                        android:textColorHint="@color/common_gray_txt"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/common_diver_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="联系电话"
                        android:textColor="@color/common_black_txt"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/phone_txt"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginRight="10dp"
                        android:inputType="phone"
                        android:background="@color/white"
                        android:hint="@string/input_phone"
                        android:textColor="@color/common_black_txt"
                        android:textColorHint="@color/common_gray_txt"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/common_diver_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="验证码"
                        android:textColor="@color/common_black_txt"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/code_txt"
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:hint="@string/input_code"
                        android:textColor="@color/common_black_txt"
                        android:textColorHint="@color/common_gray_txt"
                        android:textSize="15sp"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/get_code_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/green_corner_btn_bg"
                        android:padding="5dp"
                        android:text="获取验证码"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/common_diver_line" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="15dp"
                android:background="@color/common_diver_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="贷款金额"
                        android:textColor="@color/common_black_txt"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/count_txt"
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        android:background="@color/white"
                        android:textColor="@color/common_black_txt"
                        android:hint="请输入贷款金额"
                        android:textColorHint="@color/common_gray_txt"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="万元"
                        android:textColor="@color/common_gray_txt"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/common_diver_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="贷款期限"
                        android:textColor="@color/common_black_txt"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/time_txt"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginRight="15dp"
                        android:drawableRight="@drawable/icon_arrow_right"
                        android:gravity="center_vertical"
                        android:hint="请选择贷款期限"
                        android:textColorHint="@color/common_gray_txt"
                        android:textColor="@color/common_black_txt"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/common_diver_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/city_name_txt"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="购房城市"
                        android:textColor="@color/common_black_txt"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/city_txt"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:background="@color/white"
                        android:layout_marginRight="15dp"
                        android:gravity="center_vertical"
                        android:textColorHint="@color/common_gray_txt"
                        android:textColor="@color/common_black_txt"
                        android:textSize="14sp"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/common_diver_line" />

                <LinearLayout
                    android:id="@+id/project_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/project_name_txt"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="意向楼盘"
                        android:textColor="@color/common_black_txt"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/project_txt"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginRight="15dp"
                        android:gravity="center_vertical"
                        android:background="@color/white"
                        android:textColor="@color/common_black_txt"
                        android:textColorHint="@color/common_gray_txt"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/common_diver_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@color/white"
                    android:gravity="top|left"
                    android:orientation="horizontal"
                    android:paddingTop="15dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="备注：  "
                        android:textColor="@color/common_black_txt"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/remark_txt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="15dp"
                        android:background="@color/white"
                        android:gravity="top|left"
                        android:textColor="@color/common_black_txt"
                        android:hint="请输入您的其他需求"
                        android:textColorHint="@color/common_gray_txt"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/commit_txt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:background="@drawable/blue_corner_btn_selector"
                android:gravity="center"
                android:text="提交"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>